create, get separate book added. All methods optimised. replaced Self declared model struct usage
